--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -17,7 +17,7 @@
 
     .toggle-btn {
         position: absolute;
-        right: 1rem;
+        right: .5rem;
         display: none;
         flex-direction: column;
         justify-content: space-between;
