--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,9 +1,11 @@
 //Colors
-$primary-dark: #393D3F;
+$primary-dark: #272632;
 $primary-light: #F7F5FB;
 $active: #909090;
 //$active: #c76868;
-$block: #d7d5da;
+$block: #ceced7;
+
+
 
 //Fonts
 $primary-font: 'Montserrat', sans-serif;
