--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ section {
   width: 100vw;
   display: flex;
   justify-content: flex-end;
-  background-color: #393D3F;
+  background-color: #272632;
   padding: 0.8rem 2rem;
   z-index: 100;
 }
@@ -62,7 +62,7 @@ section {
 }
 .menu .toggle-btn {
   position: absolute;
-  right: 1rem;
+  right: 0.5rem;
   display: none;
   flex-direction: column;
   justify-content: space-between;
@@ -112,7 +112,7 @@ section {
     display: none;
     flex-direction: column;
     align-items: flex-start;
-    background-color: #393D3F;
+    background-color: #272632;
     justify-items: center;
   }
   .menu__list.active {
@@ -132,6 +132,7 @@ section {
   overflow: hidden;
   line-height: 0;
   transform: rotate(180deg);
+  filter: opacity(50%);
 }
 
 .custom-shape-divider-bottom-1655648853 svg {
@@ -142,18 +143,18 @@ section {
   transform: rotateY(180deg);
 }
 
-.custom-shape-divider-bottom-1655648853 .shape-fill {
-  fill: #393D3F;
-}
-
 .cover {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url("../img/header_1.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
   background-position: 40% 60%;
-  filter: grayscale(0.5);
+  filter: saturate(20%);
   position: relative;
+}
+.cover:hover {
+  filter: saturate(80%);
+  transition: 3ms;
 }
 .cover .txt-animation {
   -webkit-animation: animation 2s ease-out;
@@ -210,14 +211,6 @@ section {
     display: none;
   }
 }
-@media only screen and (max-width: 640px) {
-  .cover {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3));
-  }
-  .custom-shape-divider-bottom-1655648853 {
-    display: none;
-  }
-}
 @media only screen and (max-width: 1025px) {
   .cover {
     background-position: 30% 70%;
@@ -251,7 +244,7 @@ section {
   gap: 0.5em;
 }
 .about__social .fa-brands {
-  color: #393D3F;
+  color: #272632;
 }
 .about__cv {
   display: none;
@@ -316,7 +309,7 @@ section {
 .skills {
   display: flex;
   text-align: center;
-  background-color: #393D3F;
+  background-color: #272632;
   color: #F7F5FB;
   flex-direction: column;
 }
@@ -344,7 +337,7 @@ section {
   width: 100px;
   background-color: #F7F5FB;
   border-radius: 50%;
-  color: #393D3F;
+  color: #272632;
   text-align: center;
   line-height: 100px;
   vertical-align: middle;
@@ -387,6 +380,7 @@ section {
 }
 #experience h1 {
   text-align: center;
+  margin: 2rem 0;
 }
 #experience ul {
   display: flex;
@@ -398,7 +392,7 @@ section {
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
-  background-color: #d7d5da;
+  background-color: #ceced7;
   text-align: center;
   justify-content: center;
   padding: 1.8rem 3.75rem;
@@ -419,19 +413,18 @@ section {
 @media only screen and (max-width: 1025px) {
   #experience {
     padding: 6rem;
+    width: 100vw;
   }
   #experience ul {
     flex-wrap: wrap;
     justify-content: center;
   }
   .experience {
-    min-width: 30vw;
-    min-height: 20vh;
-    flex: 0 0 33.3333%;
+    flex: 0 1 33.3333%;
   }
 }
 #contact {
-  padding: 0 100px;
+  padding: 0 5rem;
   margin: 0;
 }
 
@@ -439,7 +432,7 @@ section {
   display: flex;
   flex: 1 1 0;
   justify-content: space-between;
-  background-color: #393D3F;
+  background-color: #272632;
   color: #F7F5FB;
 }
 .contact a {
@@ -448,6 +441,7 @@ section {
 }
 .contact__heading {
   font-size: xx-large;
+  margin-bottom: 1rem;
 }
 .contact__subheading {
   font-size: larger;
@@ -458,9 +452,8 @@ section {
   margin: 0.5;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 1025px) {
   .contact {
-    display: flex;
     flex-direction: column;
   }
   .contact__item {
@@ -469,7 +462,7 @@ section {
 }
 .footer {
   margin: 0;
-  background-color: #393D3F;
+  background-color: #272632;
   color: #F7F5FB;
   font-size: smaller;
   text-align: center;
