added animation, final

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,7 @@ section {
   height: 3px;
   background-color: #F7F5FB;
   border: 10px;
+  transition: all 0.3s ease-in-out;
 }
 .menu__list {
   display: flex;
@@ -108,6 +109,15 @@ section {
   .menu .toggle-btn {
     display: flex;
   }
+  .menu .toggle-btn.active .bar:nth-child(1) {
+    transform: translateY(9px) rotate(-45deg);
+  }
+  .menu .toggle-btn.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .menu .toggle-btn.active .bar:nth-child(3) {
+    transform: translateY(-9px) rotate(45deg);
+  }
   .menu__list {
     display: none;
     flex-direction: column;
@@ -118,6 +128,7 @@ section {
   .menu__list.active {
     display: flex;
     width: 100vw;
+    padding: 0.5rem;
   }
   .menu__item {
     display: block;
