--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -1,95 +1,105 @@
 .header {
-    position: fixed;
-    width: 100vw;
-    display: flex;
-    justify-content: flex-end;
-    background-color: $primary-dark;
-    padding: .8rem 2rem;
-    z-index: 100;
+  position: fixed;
+  width: 100vw;
+  display: flex;
+  justify-content: flex-end;
+  background-color: $primary-dark;
+  padding: 0.8rem 2rem;
+  z-index: 100;
 }
 
 .menu {
-    position: relative;
+  position: relative;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  align-items: center;
+
+  .toggle-btn {
+    position: absolute;
+    right: 0.5rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+  }
+
+  .bar {
+    width: 100%;
+    height: 3px;
+    background-color: $primary-light;
+    border: 10px;
+    transition: all 0.3s ease-in-out;
+  }
+
+  &__list {
     display: flex;
-    position: relative;
-    justify-content: space-between; 
-    align-items: center; 
+    justify-content: space-between;
+    align-items: center;
+  }
 
-    .toggle-btn {
-        position: absolute;
-        right: .5rem;
-        display: none;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 30px;
-        height: 21px;
-    }
-    
-    .bar {
-        width: 100%;
-        height: 3px;
-        background-color: $primary-light;
-        border: 10px;
-       
-    }
+  &__item {
+    display: block;
+    padding: 0 1rem;
+  }
 
-    &__list {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+  &__link {
+    color: $primary-light;
+    text-decoration: none;
+    font-size: larger;
 
-    &__item {
-        display: block;
-        padding: 0 1rem;
+    &:hover {
+      color: $active;
+      transition: 0.4s;
     }
-
-    &__link {
-        color: $primary-light;
-        text-decoration: none;
-        font-size: larger;
-
-        &:hover {
-            color: $active;
-            transition: 0.4s;
-        }
-    }
+  }
 }
 
 @media only screen and (max-width: $mobile) {
+  .header {
+    flex-direction: column;
+  }
 
-    .header {
-        flex-direction: column;
+  .menu {
+    flex-direction: column;
+    height: 1.5rem;
+
+    &__home {
+      display: none;
     }
 
-    .menu {
-        flex-direction: column;
-        height: 1.5rem;
+    .toggle-btn {
+      display: flex;
 
-        &__home{
-            display: none;
-        }
-
-        .toggle-btn {
-            display: flex;
-        }
-
-        &__list {
-            display: none;
-            flex-direction: column;
-            align-items: flex-start;
-            background-color: $primary-dark;
-            justify-items: center;
-
-            &.active {
-                display: flex;
-                width: 100vw;
-            }
-        }
-
-        &__item {
-            display: block;
-            padding: 0.5rem 1rem;
-        }
+      &.active .bar:nth-child(1){
+        transform: translateY(9px) rotate(-45deg);
+      }
+      &.active .bar:nth-child(2){
+        opacity: 0;
+      }
+      &.active .bar:nth-child(3){
+        transform: translateY(-9px) rotate(45deg);
+      }
     }
+
+    &__list {
+      display: none;
+      flex-direction: column;
+      align-items: flex-start;
+      background-color: $primary-dark;
+      justify-items: center;
+
+      &.active {
+        display: flex;
+        width: 100vw;
+        padding: .5rem;
+      }
+    }
+
+    &__item {
+      display: block;
+      padding: 0.5rem 1rem;
+    }
+  }
 }
