--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,10 @@ section {
   font-size: 2.5rem;
 }
 
+.section__list {
+  padding-left: 0;
+}
+
 @media only screen and (max-width: 640px) {
   body {
     font-size: 0.85rem;
@@ -432,6 +436,46 @@ section {
   }
   .experience {
     flex: 0 1 33.3333%;
+  }
+}
+#projects {
+  padding: 6rem;
+}
+#projects h1 {
+  text-align: center;
+  margin: 2rem 0;
+}
+
+.project {
+  display: flex;
+  gap: 4rem;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+.project__image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 40vw;
+}
+.project__container {
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+}
+
+@media only screen and (max-width: 1025px) {
+  .project {
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .project__image img {
+    width: 80vw;
+  }
+  .project__container {
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
   }
 }
 #contact {
