order changed, additional styles for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,6 +445,9 @@ section {
   text-align: center;
   margin: 2rem 0;
 }
+#projects ul {
+  margin-top: 3rem;
+}
 
 .project {
   display: flex;
@@ -467,10 +470,14 @@ section {
 @media only screen and (max-width: 1025px) {
   .project {
     flex-direction: column;
-    gap: 2rem;
+    gap: 0.5rem;
+    margin-bottom: 3rem;
   }
   .project__image img {
     width: 80vw;
+  }
+  .project__title {
+    margin: 0;
   }
   .project__container {
     justify-content: center;
