--- a/assets/css/_projects.scss
+++ b/assets/css/_projects.scss
@@ -6,6 +6,10 @@
         margin: 2rem 0;
     }
 
+    ul {
+        margin-top: 3rem;
+    }
+
 }
 
 .project{
@@ -33,12 +37,17 @@
 @media only screen and (max-width: $tablet){
     .project{
         flex-direction: column;
-        gap: 2rem;
+        gap: 0.5rem;
+        margin-bottom: 3rem;
 
         &__image{
             img{
                 width: 80vw;
             }
+        }
+
+        &__title{
+            margin: 0;
         }
 
         &__container{
