renamed files, minor style edits

--- a/assets/css/_cover.scss
+++ b/assets/css/_cover.scss
@@ -19,7 +19,7 @@
 
 .cover {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)),
-    url("../img/header_1.png");
+    url("../img/header.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
