--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ section {
 
 .section__title {
   font-size: 2.5rem;
+  text-align: center;
 }
 
 .section__list {
@@ -241,8 +242,8 @@ section {
   display: flex;
   flex-direction: column;
 }
-.about__info h1,
-.about__info h4 {
+.about__info h2,
+.about__info h3 {
   margin-top: 0;
 }
 .about__social {
@@ -276,7 +277,6 @@ section {
 }
 @media only screen and (max-width: 1025px) {
   .about {
-    min-width: -moz-fit-content;
     min-width: fit-content;
     width: 100vw;
     display: flex;
@@ -318,7 +318,7 @@ section {
   color: #F7F5FB;
   flex-direction: column;
 }
-.skills h1 {
+.skills h2 {
   padding: 0;
   margin-top: 0;
 }
@@ -383,7 +383,7 @@ section {
 #experience {
   padding: 6rem;
 }
-#experience h1 {
+#experience h2 {
   text-align: center;
   margin: 2rem 0;
 }
@@ -431,8 +431,7 @@ section {
 #projects {
   padding: 6rem;
 }
-#projects h1 {
-  text-align: center;
+#projects h2 {
   margin: 2rem 0;
 }
 #projects ul {
@@ -447,8 +446,7 @@ section {
   margin-top: 2rem;
 }
 .project__image img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 40vw;
 }
 .project__container {
@@ -522,4 +520,6 @@ section {
 }
 .footer p {
   margin: 0;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
