--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -40,17 +40,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 1em 0;
   }
 
-  &__item {
+ /*  &__item {
     display: block;
     padding: 0 1rem;
-  }
+  } */
 
   &__link {
     color: $primary-light;
     text-decoration: none;
     font-size: larger;
+    display: block;
+    padding: 0 1rem;
 
     &:hover {
       color: $active;
