--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,7 +392,7 @@ section {
   text-align: center;
   margin: 2rem 0;
 }
-#experience ul {
+#experience .section__list {
   display: flex;
   padding-left: 0;
   gap: 1.2rem;
@@ -415,7 +415,7 @@ section {
   #experience {
     padding: 1rem;
   }
-  #experience ul {
+  #experience .section__list {
     display: flex;
     flex-direction: column;
   }
@@ -425,7 +425,7 @@ section {
     padding: 6rem;
     width: 100vw;
   }
-  #experience ul {
+  #experience .section__list {
     flex-wrap: wrap;
     justify-content: center;
   }
