--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,7 @@ section {
   font-size: 1rem;
   cursor: pointer;
   margin-top: 20px;
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 480px) {
