refactor:reduced amount of color variables

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,14 +1,9 @@
 //Colors
 $primary-dark: #272632;
-$primary-light: #F7F5FB;
-$active: #909090;
-//$active: #c76868;
-$block: #ceced7;
-
-
+$primary-light: #f7f5fb;
 
 //Fonts
-$primary-font: 'Montserrat', sans-serif;
+$primary-font: "Montserrat", sans-serif;
 $text: 1rem;
 $title: 2.5rem;
 $subtitle: 2rem;
