--- a/assets/css/_experience.scss
+++ b/assets/css/_experience.scss
@@ -17,7 +17,7 @@
     flex: 1 1 0; 
     display: flex;
     flex-direction: column ;
-    background-color: $block;
+    background-color: #ceced7;
     text-align: center;
     justify-content: center;
     padding: 1.8rem 3.75rem;
