--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ html {
 body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  background-color: #F7F5FB;
+  background-color: #f7f5fb;
   font-size: 1rem;
   position: relative;
   overflow-x: hidden;
@@ -83,7 +83,7 @@ section {
 .menu .bar {
   width: 100%;
   height: 3px;
-  background-color: #F7F5FB;
+  background-color: #f7f5fb;
   border: 10px;
   transition: all 0.3s ease-in-out;
 }
@@ -94,7 +94,7 @@ section {
   margin: 1em 0;
 }
 .menu__link {
-  color: #F7F5FB;
+  color: #f7f5fb;
   text-decoration: none;
   font-size: larger;
   display: block;
@@ -198,17 +198,17 @@ section {
 .cover__title {
   font-size: 2.5rem;
   font-weight: bold;
-  color: #F7F5FB;
+  color: #f7f5fb;
   margin: 0;
 }
 .cover__text {
   margin: 20px;
   font-size: 2rem;
-  color: #F7F5FB;
+  color: #f7f5fb;
   text-align: center;
 }
 .cover__btn {
-  background-color: #F7F5FB;
+  background-color: #f7f5fb;
   border: none;
   border-radius: 5px;
   padding: 10px 44px;
@@ -321,7 +321,7 @@ section {
   display: flex;
   text-align: center;
   background-color: #272632;
-  color: #F7F5FB;
+  color: #f7f5fb;
   flex-direction: column;
 }
 .skills h2 {
@@ -346,7 +346,7 @@ section {
 .skill__icon {
   height: 100px;
   width: 100px;
-  background-color: #F7F5FB;
+  background-color: #f7f5fb;
   border-radius: 50%;
   color: #272632;
   text-align: center;
@@ -489,11 +489,11 @@ section {
   flex: 1 1 0;
   justify-content: space-between;
   background-color: #272632;
-  color: #F7F5FB;
+  color: #f7f5fb;
 }
 .contact a {
   text-decoration: underline;
-  color: #F7F5FB;
+  color: #f7f5fb;
 }
 .contact__heading {
   font-size: xx-large;
@@ -519,7 +519,7 @@ section {
 .footer {
   margin: 0;
   background-color: #272632;
-  color: #F7F5FB;
+  color: #f7f5fb;
   font-size: smaller;
   text-align: center;
   padding: 20px;
