refactor: cleaning general styles and separating section

--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -1,49 +1,17 @@
-html {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-  overflow-x: hidden;
-}
 *,
 ::before,
 ::after {
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: $primary-font;
   background-color: $primary-light;
+  color: $primary-dark;
   font-size: $text;
-  position: relative;
-  overflow-x: hidden;
-}
-
-main{
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-ul{
-  list-style-type: none;
-}
-
-section{
-  max-width: 100vw;
-}
-
-.section__title{
-font-size: $title;
-text-align: center;
-}
-
-.section__list{
-  padding-left: 0;
-}
-
-@media only screen and (max-width: $mobile){
-  body{
-    font-size: 0.85rem;
-    overflow-x: hidden;
-  }
 }
