--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,19 @@
-html {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-  overflow-x: hidden;
-}
-
 *,
 ::before,
 ::after {
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
   background-color: #f7f5fb;
+  color: #272632;
   font-size: 1rem;
-  position: relative;
-  overflow-x: hidden;
-}
-
-main {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-ul {
-  list-style-type: none;
-}
-
-section {
-  max-width: 100vw;
 }
 
 .section__title {
@@ -42,12 +25,6 @@ section {
   padding-left: 0;
 }
 
-@media only screen and (max-width: 640px) {
-  body {
-    font-size: 0.85rem;
-    overflow-x: hidden;
-  }
-}
 .header {
   position: fixed;
   width: 100vw;
