--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -15,3 +15,19 @@ body {
   color: $primary-dark;
   font-size: $text;
 }
+
+h2 {
+  font-size: $title;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+h3 {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
