--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -1,95 +1,64 @@
-#about {
-  padding: 6rem;
-  margin: 1.25rem;
-}
-
 .about {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2em;
-
-  &__info {
-    width: 34%;
     display: flex;
-    flex-direction: column;
-
-    h2,
-    h3 {
-      margin-top: 0;
-    }
-  }
-
-  &__social {
-    display: flex;
-    gap: 0.5em;
-
-    .fa-brands {
-      color: $primary-dark;
-    }
-  }
-
-  &__cv {
-    display: none;
-  }
-
-  &__img {
-    height: 16rem;
-    padding-top: 2rem;
-  }
-}
-
-@media only screen and (max-width: $smaller-devices) {
-  #about {
-    margin: 0;
-    padding: 6rem 3rem;
-    width: 100vw;
-  }
-
-  .about__social {
+    padding: 6rem 2rem;
+    justify-content: center;
     align-items: center;
-  }
+    gap: 2rem;
 
-  .about__cv{
-    display: block;
-    height: 1.8em;
+    @media (max-width: $tablet) {
+      flex-direction: column;
+    }
+
+   @media (max-width: $smaller-devices) {
+    padding: 4rem 1rem;
+   }
+}
+
+.about__info {
+    max-width: 40ch;
+    flex-basis: 50%;
+}
+
+.about__portrait {
+    align-self: flex-end;
+    @media (max-width: $tablet) {
+        display: flex;
+        justify-content: left;
+        height: auto;
+        padding: 0;
+        align-self: center;
   }
 }
 
-@media only screen and (max-width: $tablet) {
-  .about {
-    min-width: fit-content;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    padding: 10rem;
+.about__image {
+    display: block;
 
-    &__img {
-      display: flex;
-      justify-content: left;
-      height: auto;
-      padding: 0;
-      align-self: flex-start;
-
-      img {
-        width: 25vh;
+    @media (max-width: $tablet) {
+        width: 80%;
+        height: auto;
         border-radius: 50%;
         margin: auto;
-      }
-    }
+  }
+}
 
-    &__info {
-      width: 100%;
-      text-align: left;
-    }
+.about__icon {
+    color: $primary-dark;
+}
 
-    &__social {
-      display: flex;
-      justify-content: left;
-    }
+.about__links {
+    display: flex;
+    gap: 0.5rem;
 
-    &__text {
-      text-align: justify;
-    }
+    @media (max-width: $smaller-devices) {
+        align-items: center;
+  }
+}
+
+.about__cv {
+    display: none;
+
+    @media (max-width: $smaller-devices) {
+        display: block;
+        height: 1.8rem;
   }
 }
