--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -1,44 +1,33 @@
-#contact{
-    padding: 0 5rem;;
-    margin: 0;
-}
-
 .contact {
+    padding: 1rem 5rem;
+    margin: 0;
     display: flex;
-    flex: 1 1 0;
     justify-content: space-between;
     background-color: $primary-dark;
     color: $primary-light;
 
-    a {
-        text-decoration: underline;
-        color: $primary-light;
-    }
-
-    &__heading{
-        font-size:xx-large;
-        margin-bottom: 1rem;
-    }
-
-    &__subheading{
-        font-size: larger;
-        margin: 0.5em;
-    }
-
-    &__text{
-        font-size: $text;
-        margin: 0.5;
-    }
-
-}
-
-@media only screen and (max-width: $tablet){
-    .contact{
+    @media (max-width: $tablet) {
         flex-direction: column;
-
-        &__item{
-            text-align: center;
-        }    
     }
 }
 
+.contact__item {
+    text-align: center;
+}
+
+.contact__heading {
+    font-size: xx-large;
+    font-weight: 600;
+    margin: 1rem;
+}
+
+.contact__subheading {
+    font-size: larger;
+    margin: 0.5em;
+}
+
+.contact__link {
+    text-decoration: underline;
+    color: $primary-light;
+    font-size: $text;
+}
