--- a/assets/css/_projects.scss
+++ b/assets/css/_projects.scss
@@ -1,58 +1,31 @@
-#projects{
-    padding: 6rem;
-
-    h2{
-        margin: 2rem 0;
-    }
-
-    ul {
-        margin-top: 3rem;
-    }
-
+.projects {
+    padding: 1rem 5rem;
 }
 
-.project{
+.project {
     display: flex;
-    gap: 4rem;
-    justify-content: center;
-    align-items: center;
     margin-top: 2rem;
-
-    &__image{
-
-        img{
-            object-fit: cover;
-            width: 40vw;
-        }
-    }
-
-    &__container{
-        width: 50vw;
-        display: flex;
+    
+    @media (max-width: $tablet) {
         flex-direction: column;
+        margin-bottom: 3rem;
     }
 }
 
-@media only screen and (max-width: $tablet){
-    .project{
-        flex-direction: column;
-        gap: 0.5rem;
-        margin-bottom: 3rem;
+.project__info {
+    text-align: left;
+    
+    @media (max-width: $tablet) {
+        text-align: center;
+    }
+}
 
-        &__image{
-            img{
-                width: 80vw;
-            }
-        }
-
-        &__title{
-            margin: 0;
-        }
-
-        &__container{
-            justify-content: center;
-            align-items: center;
-            width: 80vw;
-        }
+.project__image {
+    display: block;
+    width: 40%;
+    margin-right: 3rem;
+    
+    @media (max-width: $tablet) {
+        width: 100%;
     }
 }
