--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 @import 'general';
-@import 'section';
+@import 'header';
 @import 'menu';
 @import 'cover';
 @import 'about';
