--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -1,9 +1,11 @@
 .about {
     display: flex;
-    padding: 6rem 2rem;
+    padding: 1rem 2rem;
+    margin-bottom: 2rem;
     justify-content: center;
     align-items: center;
     gap: 2rem;
+
 
     @media (max-width: $tablet) {
       flex-direction: column;
