--- a/assets/css/_experience.scss
+++ b/assets/css/_experience.scss
@@ -1,5 +1,5 @@
 .experience {
-    padding: 1rem 4rem;
+    padding: 1rem 2rem;
     margin-bottom: 2rem;
 
     @media (max-width: $mobile){
@@ -19,14 +19,12 @@
 
 .experience__item {
     background-color: #ceced7;
-    text-align: center;
-    
+    text-align: center; 
+    max-width: 70ch;
     padding: 1rem;
-
     flex-basis: 33%;
     flex-grow: 0;
     flex-shrink: 1;
-
     @media (max-width: $mobile){
         flex-basis: 90%;
         max-width: 40ch;
