--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -28,7 +28,7 @@
 .menu__list--opened {
     @media (max-width: $mobile) {
         display: flex;
-        width: 100vw;
+        width: 100%;
         padding: 0.5rem;
     }
 }
