--- a/assets/css/_projects.scss
+++ b/assets/css/_projects.scss
@@ -1,8 +1,9 @@
 .projects {
-    padding: 1rem 5rem;
+    padding: 1rem 2rem;
+    margin-bottom: 2rem;
 }
 
-.project {
+.projects__project {
     display: flex;
     margin-top: 2rem;
     
@@ -12,7 +13,7 @@
     }
 }
 
-.project__info {
+.projects__info {
     text-align: left;
     
     @media (max-width: $tablet) {
@@ -20,7 +21,7 @@
     }
 }
 
-.project__image {
+.projects__image {
     display: block;
     width: 40%;
     margin-right: 3rem;
