--- a/assets/css/_projects.scss
+++ b/assets/css/_projects.scss
@@ -6,15 +6,18 @@
 .projects__project {
     display: flex;
     margin-top: 2rem;
-    
+    column-gap: 3rem;
+    max-width: 1400px;
+    margin-inline: auto;
+
     @media (max-width: $tablet) {
         flex-direction: column;
-        margin-bottom: 3rem;
     }
 }
 
 .projects__info {
     text-align: left;
+    line-height: 1.3;
     
     @media (max-width: $tablet) {
         text-align: center;
@@ -23,8 +26,7 @@
 
 .projects__image {
     display: block;
-    width: 40%;
-    margin-right: 3rem;
+    width: 50%;
     
     @media (max-width: $tablet) {
         width: 100%;
