--- a/assets/css/_skills.scss
+++ b/assets/css/_skills.scss
@@ -10,7 +10,9 @@
     grid-template-columns: repeat(auto-fill, minmax(max(25ch, calc((100% - 6rem)/3)),1fr));
     grid-template-rows: repeat(2, auto);
     gap: 3rem;
-    justify-items: center;
+    //justify-items: center;
+    max-width: 1400px;
+    margin-inline: auto;
    
     @media (max-width: $smaller-devices) {
         grid-template-columns: 1fr;
